# Cobot_3

./: .gitignore  README.md  dependencies.repos  setup.sh
ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/interfaces/action/: ApproachBox.action  DropBox.action  LiftBox.action  NavigateToRoom.action
ros2_ws/src/interfaces/msg/: BoxDetection2D.msg
ros2_ws/src/isaacsim_setup/: insert_qr.py  make_qr.py
ros2_ws/src/isaacsim_setup/maps/: map.pgm  map.yaml
ros2_ws/src/manipulation/: package.xml  setup.py
ros2_ws/src/manipulation/launch/: manipulation.launch.py
ros2_ws/src/manipulation/manipulation/: approach_box.py  drop_box.py  lift_box.py
ros2_ws/src/navigation/tiago_cartographer/: CMakeLists.txt  package.xml
ros2_ws/src/navigation/tiago_cartographer/config/: tiago_rear_laser.lua
ros2_ws/src/navigation/tiago_cartographer/launch/: tiago_cartographer.launch.py
ros2_ws/src/navigation/tiago_cartographer/rviz/: tiago_cartographer.rviz
ros2_ws/src/navigation/tiago_nav2/: package.xml  setup.cfg  setup.py
ros2_ws/src/navigation/tiago_nav2/config/: initial_pose.yaml  nav2_params.yaml  room_goals.yaml
ros2_ws/src/navigation/tiago_nav2/launch/: nav2.launch.py
ros2_ws/src/orchestrator/: package.xml  setup.py
ros2_ws/src/orchestrator/launch/: orchestrator.launch.py  tiago_bringup.launch.py
ros2_ws/src/orchestrator/orchestrator/: delivery_orchestrator.py
ros2_ws/src/perception/receiver_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/perception/utils/: download_box_dataset.py  train_box_detector.py
ros2_ws/src/tiago_isaac_ros2_control/: CMakeLists.txt  package.xml  tiago_isaac_ros2_control.xml
ros2_ws/src/tiago_isaac_ros2_control/config/: isaac_ros2_control.yaml
ros2_ws/src/tiago_isaac_ros2_control/include/tiago_isaac_ros2_control/: isaac_system.hpp
ros2_ws/src/tiago_isaac_ros2_control/launch/: isaac_ros2_control_bringup.launch.py
ros2_ws/src/tiago_isaac_ros2_control/src/: isaac_system.cpp
ros2_ws/src/tiago_isaac_ros2_control/urdf/: tiago_dual.isaac_ros2_control.xacro  tiago_dual_manipulation.urdf.xacro
(+6 files in other folders)
